[package]
name = "ws-lite-server"
version = "0.1.0"
authors = ["Christoffer Lantz <christoffer.lantz@androidbutiken.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-lite = "1.11.2"
async-net = "1.5.0"
ws-lite = { path = "../ws-lite" }